principal landing deleted

--- a/templates/administracion/base/header.html
+++ b/templates/administracion/base/header.html
@@ -1,7 +1,7 @@
 {% load static %}
 <header class="header">
     <div class="logo-container">
-        <a href="{% url 'principal:index' %}" class="logo">
+        <a href="" class="logo">
             <img src="{% static 'administracion\img\Blaster.png' %}" height="35" alt="Porto Admin" class="blaster-logo"/>
         </a>
         <div class="visible-xs toggle-sidebar-left" data-toggle-class="sidebar-left-opened" data-target="html" data-fire-event="sidebar-left-opened">
