Local deploy false

--- a/templates/administracion/base/home.html
+++ b/templates/administracion/base/home.html
@@ -23,7 +23,7 @@
 		<link rel="stylesheet" href="{% static 'lib/octopus/assets/vendor/magnific-popup/magnific-popup.css' %}" />
         <link rel="stylesheet" href="{% static 'lib/octopus/assets/vendor/bootstrap-datepicker/css/datepicker3.css' %}" />
 
-        <link rel='shortcut icon' href="{% static 'administracion\img\Blaster3d.png' %}">
+        <link rel='shortcut icon' href="{% static 'administracion\img\stredy.jpg' %}">
 
         <!-- Theme CSS -->
 		<link rel="stylesheet" href="{% static 'lib/octopus/assets/stylesheets/theme.css' %}" />
