--- a/templates/administracion/base/header.html
+++ b/templates/administracion/base/header.html
@@ -2,7 +2,7 @@
 <header class="header">
     <div class="logo-container">
         <a href="" class="logo">
-            <img src="{% static 'administracion\img\Blaster.png' %}" height="35" alt="Porto Admin" class="blaster-logo"/>
+            <img src="{% static 'administracion\img\stredy.jpg' %}" height="35" alt="Porto Admin" class="blaster-logo"/>
         </a>
         <div class="visible-xs toggle-sidebar-left" data-toggle-class="sidebar-left-opened" data-target="html" data-fire-event="sidebar-left-opened">
             <i class="fa fa-bars" aria-label="Toggle sidebar"></i>
