login index changed

--- a/templates/administracion/specific/login.html
+++ b/templates/administracion/specific/login.html
@@ -41,7 +41,7 @@
 		<!-- start: page -->
 		<section class="body-sign">
 			<div class="center-sign">
-				<a href="{% url 'principal:index' %}" class="logo pull-left">
+				<a href="" class="logo pull-left">
 					<img src="{% static 'administracion\img\Blaster.png' %}" height="54" alt="Porto Admin" class="blaster-logo" />
 				</a>
 
