Stredy name title

--- a/templates/administracion/base/home.html
+++ b/templates/administracion/base/home.html
@@ -5,8 +5,8 @@
         <title>{{ title }}</title>
         <meta charset="UTF-8">
         
-		<meta name="keywords" content="Falen - Impresiones 3D" />
-		<meta name="description" content="Falen 3D Admin">
+		<meta name="keywords" content="Stredy - Impresiones 3D" />
+		<meta name="description" content="Stredy 3D Admin">
 		<meta name="author" content="Angel David Castro">
 
 		<!-- Mobile Metas -->
