--- a/templates/administracion/specific/login.html
+++ b/templates/administracion/specific/login.html
@@ -7,8 +7,8 @@
 		<meta charset="UTF-8">
 		<title>{{ title }}</title>
 
-		<meta name="keywords" content="Blaster Impresiones 3D" />
-		<meta name="description" content="Blaster Admin">
+		<meta name="keywords" content="Stredy Impresiones 3D" />
+		<meta name="description" content="Stredy Impresiones admin">
 		<meta name="author" content="Angel David Castro">
 
 		<!-- Mobile Metas -->
@@ -42,7 +42,7 @@
 		<section class="body-sign">
 			<div class="center-sign">
 				<a href="" class="logo pull-left">
-					<img src="{% static 'administracion\img\Blaster.png' %}" height="54" alt="Porto Admin" class="blaster-logo" />
+					<img src="{% static 'administracion\img\stredy.jpg' %}" height="54" alt="Porto Admin" class="blaster-logo" />
 				</a>
 
 				<div class="panel panel-sign ">
