stredy icon changed

--- a/templates/administracion/specific/login.html
+++ b/templates/administracion/specific/login.html
@@ -31,7 +31,7 @@
 
 		<!-- Theme Custom CSS -->
 		<link rel="stylesheet" href="{% static 'administracion/css/login.css' %}">
-		<link rel='shortcut icon' href="{% static 'administracion\img\Blaster3d.png' %}">
+		<link rel='shortcut icon' href="{% static 'administracion\img\stredy.jpg' %}">
 
 		<!-- Head Libs -->
 		<script src="{% static 'lib/octopus/assets/vendor/modernizr/modernizr.js' %}"></script>
